# aletheia-server

./: .gitignore  Cargo.toml  Dockerfile.mongodb  Dockerfile.server  README.md  cloudbuild.yaml  docker-compose.yml  init-service.sh  mongo-init-lite.sh  mongo-init.sh
conf/: conf.toml  config.toml
src/: lib.rs  main.rs
src/common/: config.rs  error.rs
src/db/: mod.rs  mongodb.rs  product_trait.rs
src/models/: product.rs
src/routes/: health.rs  hub.rs  mod.rs  product.rs  product_format.rs  product_info.rs  product_routes.rs
