[package]
name = "aletheia-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde_json = "1.0.132"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.93"
toml = "0.8.19"
lazy_static = "1.5.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}


